--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
   <style>
     body {
       background-color: hsl(212, 45%, 89%);
+      font-family: Outfit, sans-serif;
+      margin: 0;
+      box-sizing: border-box;
+      width: 100%;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
     }
 
     .container {
@@ -26,24 +35,22 @@
     img {
       width: 100%;
       border-radius: 8px;
-      margin-bottom: 16px;
+      margin-bottom: 6px;
     }
 
-    p {
-      font-family: Outfit, sans-serif;
-      margin: 0 auto;
+    .text-container {
       text-align: center;
-      width: 242px;
+      padding: 10px;
     }
-
+    
     .text {
-      font-size: 20px;
+      font-size: 1.25rem;
       font-weight: bold;
       margin-bottom: 12px;
     }
 
     .sub-text {
-      font-size: 14px;
+      font-size: 0.875em;
       color: hsl(220, 15%, 55%);
       margin-top: 5px;
       margin-bottom: 18px;
@@ -52,9 +59,13 @@
 </head>
 <body>
   <div class="container">
-    <img src="images/image-qr-code.png">
-    <p class="text">Improve your front-end skills by building projects</p>
-    <p class="sub-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    <div class="image-container">
+      <img src="images/image-qr-code.png">
+    </div>
+    <div class="text-container">
+      <h1 class="text">Improve your front-end skills by building projects</h1>
+      <p class="sub-text">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+    </div>
   </div>
 </body>
 </html>
